# codex-openai-adapter

./: .env.example  .gitignore  AGENTS.md  README.ko.md  README.md  install-adapter.bat  install-adapter.sh  install-proxy.bat  install-proxy.sh  pyproject.toml  run-adapter.bat  run-adapter.sh  run-proxy.bat  run-proxy.sh
src/codex_openai_adapter/: app.py
src/codex_openai_adapter/api/: deps.py
src/codex_openai_adapter/core/: config.py  debug_trace.py  errors.py  logging.py  security.py
src/codex_openai_adapter/schemas/: events.py
src/codex_openai_adapter/services/: auth_store.py  backend_client.py  content_conversion.py  event_parser.py  model_catalog.py  model_resolution.py  proxy_service.py  stream_state.py  streaming_formatter.py  tool_conversion.py  usage_extraction.py
src/codex_openai_ollama_proxy/: app.py  cli.py
src/codex_openai_ollama_proxy/api/: deps.py
src/codex_openai_ollama_proxy/core/: config.py  debug_trace.py  errors.py  logging.py
src/codex_openai_ollama_proxy/schemas/: auth.py  backend.py  ollama.py  openai.py  usage.py
src/codex_openai_ollama_proxy/services/: auth_store.py  backend_client.py  content_conversion.py  event_parser.py  model_catalog.py  model_resolution.py  proxy_service.py  stream_state.py  tool_conversion.py  (+2 more)
tests/: chat-test.html  test_auth_policy.py  test_auth_refresh.py  test_content_conversion.py  test_model_catalog.py  test_model_resolution.py  test_ollama_routes.py  test_openai_routes.py  test_stream_robustness.py  test_streaming_ollama.py  test_streaming_openai.py  test_tool_conversion.py  test_usage_extraction.py
(+10 files in other folders)
