[project]
name = "codex-openai-ollama-proxy"
version = "0.1.0"
description = "FastAPI proxy for Codex auth backed OpenAI/Ollama compatible endpoints"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<0.29.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<0.0.21",
  "uvicorn[standard]>=0.34.0,<0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.26.0,<0.27.0",
  "respx>=0.22.0,<0.23.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_openai_ollama_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
